@@ -1490,7 +1490,7 @@ AC_PROG_RANLIB
 
 dnl ar command
 dnl   defines AR with the appropriate command
-dnl 
+dnl
 dnl For Sun CC AC_BAKEFILE below sets AR to the compiler itself.
 if test "x$SUNCXX" != xyes; then
     AC_CHECK_TOOL(AR, ar)
@@ -5051,7 +5051,7 @@ fi
 dnl check for uname (POSIX) and gethostname (BSD)
 WX_CHECK_FUNCS(uname,,,[#include <sys/utsname.h>])
 if test "$wx_cv_func_uname" != yes; then
-    WX_CHECK_FUNCS(gethostname)  
+    WX_CHECK_FUNCS(gethostname)
 fi
 
 WX_CHECK_FUNCS(strtok_r, [], [], [#define _REENTRANT])
@@ -6433,7 +6433,7 @@ if test "$wxUSE_SOCKETS" = "yes" ; then
                        wx_cv_type_getsockopt5,
             [
                 dnl Note that the rules for compatibility of pointers
-                dnl are somewhat different between C and C++, so code 
+                dnl are somewhat different between C and C++, so code
                 dnl that fails in C++ may not even give a warning about
                 dnl converting between incompatible pointer types in C.
                 dnl So this test needs to be done in C++ mode.
@@ -7568,38 +7568,59 @@ dnl ---------------------------------------------------------------------------
 dnl define variables with all built libraries for wx-config
 dnl ---------------------------------------------------------------------------
 
-CORE_BASE_LIBS="net base"
-CORE_GUI_LIBS="adv core"
+STD_BASE_LIBS="base"
+STD_GUI_LIBS=""
+BUILT_WX_LIBS="base"
+ALL_WX_LIBS="xrc stc gl media dbgrid qa html adv core odbc xml net base"
 
-if test "$wxUSE_XML" = "yes" ; then
-    CORE_BASE_LIBS="xml $CORE_BASE_LIBS"
+if test "$wxUSE_SOCKETS" = "yes" ; then
+    STD_BASE_LIBS="net $STD_BASE_LIBS"
+    BUILT_WX_LIBS="net $BUILT_WX_LIBS"
 fi
 if test "$wxUSE_ODBC" != "no" ; then
-    CORE_BASE_LIBS="odbc $CORE_BASE_LIBS"
-    CORE_GUI_LIBS="dbgrid $CORE_GUI_LIBS"
+    BUILT_WX_LIBS="odbc $BUILT_WX_LIBS"
 fi
-if test "$wxUSE_HTML" = "yes" ; then
-    CORE_GUI_LIBS="html $CORE_GUI_LIBS"
-fi
-if test "$wxUSE_DEBUGREPORT" = "yes" ; then
-    CORE_GUI_LIBS="qa $CORE_GUI_LIBS"
-fi
-if test "$wxUSE_XRC" = "yes" ; then
-    CORE_GUI_LIBS="xrc $CORE_GUI_LIBS"
-fi
-if test "$wxUSE_AUI" = "yes" ; then
-    CORE_GUI_LIBS="aui $CORE_GUI_LIBS"
-fi
-if test "$wxUSE_STC" = "yes" ; then
-    CORE_GUI_LIBS="stc $CORE_GUI_LIBS"
+if test "$wxUSE_XML" = "yes" ; then
+    STD_BASE_LIBS="xml $STD_BASE_LIBS"
+    BUILT_WX_LIBS="xml $BUILT_WX_LIBS"
 fi
 
-if test "$wxUSE_GUI" != "yes"; then
-    CORE_GUI_LIBS=""
+if test "$wxUSE_GUI" = "yes"; then
+    STD_GUI_LIBS="adv core"
+
+    if test "$wxUSE_DEBUGREPORT" = "yes" ; then
+        STD_GUI_LIBS="qa $STD_GUI_LIBS"
+        BUILT_WX_LIBS="qa $BUILT_WX_LIBS"
+    fi
+    if test "$wxUSE_ODBC" != "no" ; then
+        BUILT_WX_LIBS="dbgrid $BUILT_WX_LIBS"
+    fi
+    if test "$wxUSE_HTML" = "yes" ; then
+        STD_GUI_LIBS="html $STD_GUI_LIBS"
+        BUILT_WX_LIBS="html $BUILT_WX_LIBS"
+    fi
+    if test "$wxUSE_MEDIACTRL" = "yes" ; then
+        BUILT_WX_LIBS="media $BUILT_WX_LIBS"
+    fi
+    if test "$wxUSE_OPENGL" = "yes" ; then
+        BUILT_WX_LIBS="gl $BUILT_WX_LIBS"
+    fi
+    if test "$wxUSE_AUI" = "yes" ; then
+        BUILT_WX_LIBS="aui $BUILT_WX_LIBS"
+    fi
+    if test "$wxUSE_STC" = "yes" ; then
+        BUILT_WX_LIBS="stc $BUILT_WX_LIBS"
+    fi
+    if test "$wxUSE_XRC" = "yes" ; then
+        STD_GUI_LIBS="xrc $STD_GUI_LIBS"
+        BUILT_WX_LIBS="xrc $BUILT_WX_LIBS"
+    fi
 fi
 
-AC_SUBST(CORE_BASE_LIBS)
-AC_SUBST(CORE_GUI_LIBS)
+AC_SUBST(ALL_WX_LIBS)
+AC_SUBST(BUILT_WX_LIBS)
+AC_SUBST(STD_BASE_LIBS)
+AC_SUBST(STD_GUI_LIBS)
 
 dnl ---------------------------------------------------------------------------
 dnl Output the makefiles and such from the results found above
